# PCL_Visualization

./: .gitignore  3D_INTERACTION_SUMMARY.md  CLAUDE.md  H103v2.asc  H103v2.wrp  Qt_GUI_Framework_Summary.md  README.md  UI_THEME_IMPROVEMENTS.md  task.md  结构设计.md  重构报告.md
analysis/: Z轴分析报告.md  z_axis_analysis.py
data/: test02.asc  test03.asc
python/: analyze_pointcloud.py
qtcreator_windows/: CMakeLists.txt  README.md
src/: CMakeLists.txt  analyze_cli.cpp  main.cpp
src/analysis/: AnalysisResult.cpp  AnalysisResult.h  GeometryCalculator.cpp  GeometryCalculator.h  PotholeDetector.cpp  PotholeDetector.h
src/core/: PointCloud.cpp  PointCloud.h  PointCloudLoader.cpp  PointCloudLoader.h
src/ui/: Camera3D.cpp  Camera3D.h  ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  ResultPanel.cpp  ResultPanel.h  ThemeManager.cpp  ThemeManager.h  VisualizerWidget.cpp  VisualizerWidget.h
src/visualization/: Visualizer.cpp  Visualizer.h
tests/: test_analysis.cpp  test_central_max_pothole.cpp
